--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  wave: ^0.2.2
+  config: ^0.7.1
   percent_indicator: ^4.2.5
   flutter:
     sdk: flutter
